kustomize/backend/overlays/viken-no-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-betaling-backend
spec:
  template:
    spec:
      containers:
        - name: fint-betaling-backend
          image: ghcr.io/fintlabs/fint-betaling-backend:sha-0000000
